# Local_SQL_Analytics_Agent

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: ambiguous_questions.jsonl  evaluation_questions.jsonl  safety_prompts.jsonl
docs/: ARCHITECTURE.md  DEVELOPMENT_LOG.md  PROJECT_STATUS.md  SECURITY.md
notebooks/: 01_dataset_and_schema.ipynb  02_agent_pipeline.ipynb  03_evaluation_and_demo.ipynb
reports/: evaluation.csv  failure_analysis.md  metrics.json
reports/traces/: ambi_001.json  ambi_002.json  ambi_003.json  ambi_004.json  ambi_005.json  biz_001.json  biz_002.json  biz_003.json  biz_004.json  biz_005.json  biz_006.json  biz_007.json  biz_008.json  biz_009.json  biz_010.json  biz_011.json  biz_012.json  biz_013.json  biz_014.json  biz_015.json  biz_016.json  safe_001.json  safe_002.json  safe_003.json  safe_004.json  safe_005.json  safe_006.json  safe_007.json  safe_008.json  safe_009.json  safe_010.json
scripts/: create_demo_db.py  demo_cli.py  run_eval.py
src/sql_agent/: __init__.py  agent.py  evaluation.py  executor.py  llm.py  presenter.py  schema_inspector.py  schema_selector.py  schemas.py  sql_generator.py  sql_policy.py
tests/: conftest.py  test_agent_loop.py  test_evaluation_and_presenter.py  test_executor_readonly.py  test_inspector_and_selector.py  test_schemas_and_generator.py  test_sql_policy.py
